welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: '(' expected but identifier found.
		if tab(i)=lookingFor
                   ^